--- a/index.html
+++ b/index.html
@@ -10,53 +10,53 @@
 <body>
     
     <main class ='memory-game'>
-        <div class="card" data-card="bowser">
-            <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="harryPotter">
+            <img class="card-front" src="./img/harry-potter.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="luigi">
-            <img class="card-front" src="./img/luigi.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="HermioneGranger">
+            <img class="card-front" src="./img/hermione-granger.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="mario">
-            <img class="card-front" src="./img/mario.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="RonyWeasley">
+            <img class="card-front" src="./img/rony-weasley.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="peach">
-            <img class="card-front" src="./img/peach.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="AlvoDumbledore">
+            <img class="card-front" src="./img/alvo-dumbledore.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="toad">
-            <img class="card-front" src="./img/toad.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="SeveroSnape">
+            <img class="card-front" src="./img/severo-snape.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="yoshi">
-            <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="LordVoldemort">
+            <img class="card-front" src="./img/lord-voldemort.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="bowser">
-            <img class="card-front" src="./img/bowser.jpg" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="harryPotter">
+            <img class="card-front" src="./img/harry-potter.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="luigi">
-            <img class="card-front" src="./img/luigi.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="HermioneGranger">
+            <img class="card-front" src="./img/hermione-granger.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="mario">
-            <img class="card-front" src="./img/mario.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="RonyWeasley">
+            <img class="card-front" src="./img/rony-weasley.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="peach">
-            <img class="card-front" src="./img/peach.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="AlvoDumbledore">
+            <img class="card-front" src="./img/alvo-dumbledore.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="toad">
-            <img class="card-front" src="./img/toad.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="SeveroSnape">
+            <img class="card-front" src="./img/severo-snape.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
-        <div class="card" data-card="yoshi">
-            <img class="card-front" src="./img/yoshi.png" alt="Face da carta">
-            <img class="card-back" src="./img/box.png" alt="Verso da carta">
+        <div class="card" data-card="LordVoldemort">
+            <img class="card-front" src="./img/lord-voldemort.jpg" alt="Face da carta">
+            <img class="card-back" src="./img/hogwarts.png" alt="Verso da carta">
         </div>
     </main>
     <script src="./script.js"></script>
